<resources>
    <string name="app_name">Unit Converter</string>
    <string name="temperature_converter">Temperature\nConverter</string>
    <string name="celcius">C</string>
    <string name="fahrenheit">F</string>
    <string name="kelvin">K</string>
    <string name="swap">Swap</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="equal">=</string>
    <string name="comma">,</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="number_0">0</string>
</resources>
