<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/temperature_converter"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/input_output"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_celcius"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent=".33"
            android:background="@drawable/custom_bg_color"
            android:clickable="false"
            android:text="@string/celcius"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:backgroundTint="@null"
            app:backgroundTintMode="add"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/ll_temp_converter_celcius"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/custom_bg_color"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@id/btn_celcius"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/btn_celcius"
            app:layout_constraintTop_toTopOf="@id/btn_celcius">

            <TextView
                android:id="@+id/tv_input_celcius"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="16dp"
                android:gravity="center|end"
                android:textColor="@color/black"
                android:textSize="24sp"
                tools:text="0" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_fahrenheit"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent=".33"
            android:layout_marginTop="16dp"
            android:background="@drawable/custom_bg_color"
            android:clickable="false"
            android:text="@string/fahrenheit"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:backgroundTint="@null"
            app:backgroundTintMode="add"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_celcius" />

        <LinearLayout
            android:id="@+id/ll_temp_converter_fahrenheit"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/custom_bg_color"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@id/btn_fahrenheit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/btn_fahrenheit"
            app:layout_constraintTop_toTopOf="@id/btn_fahrenheit">

            <TextView
                android:id="@+id/tv_input_fahrenheit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="16dp"
                android:gravity="center|end"
                android:textColor="@color/black"
                android:textSize="24sp"
                tools:text="0" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_swap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/custom_bg_color"
            android:text="@string/swap"
            android:textColor="@color/black"
            android:textStyle="italic"
            app:backgroundTint="@null"
            app:backgroundTintMode="add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_temp_converter_fahrenheit" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/number_group"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp"
        android:layout_marginBottom="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_output">

        <LinearLayout
            android:id="@+id/number_first_row"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:weightSum="100"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/number_second_row">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="25"
                android:background="@drawable/custom_bg_color"
                android:backgroundTintMode="add"
                android:text="@string/number_1"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:backgroundTint="@null" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="25"
                android:background="@drawable/custom_bg_color"
                android:backgroundTintMode="add"
                android:text="@string/number_2"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:backgroundTint="@null" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="25"
                android:background="@drawable/custom_bg_color"
                android:backgroundTintMode="add"
                android:text="@string/number_3"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:backgroundTint="@null" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_clear"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="25"
                android:background="@drawable/custom_bg_color"
                android:backgroundTintMode="add"
                android:text="@string/celcius"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:backgroundTint="@null" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/number_second_row"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="2dp"
            android:orientation="horizontal"
            android:weightSum="100"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/number_first_row"
            app:layout_constraintBottom_toTopOf="@id/number_third_row">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="25"
                android:background="@drawable/custom_bg_color"
                android:backgroundTintMode="add"
                android:text="@string/number_4"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:backgroundTint="@null" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="25"
                android:background="@drawable/custom_bg_color"
                android:backgroundTintMode="add"
                android:text="@string/number_5"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:backgroundTint="@null" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_6"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="25"
                android:background="@drawable/custom_bg_color"
                android:backgroundTintMode="add"
                android:text="@string/number_6"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:backgroundTint="@null" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_plus"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="25"
                android:background="@drawable/custom_bg_color"
                android:backgroundTintMode="add"
                android:text="@string/plus"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:backgroundTint="@null" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/number_third_row"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="2dp"
            android:orientation="horizontal"
            android:weightSum="100"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/number_second_row"
            app:layout_constraintBottom_toTopOf="@id/number_fourth_row">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_7"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="25"
                android:background="@drawable/custom_bg_color"
                android:backgroundTintMode="add"
                android:text="@string/number_7"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:backgroundTint="@null" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_8"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="25"
                android:background="@drawable/custom_bg_color"
                android:backgroundTintMode="add"
                android:text="@string/number_8"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:backgroundTint="@null" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_9"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="25"
                android:background="@drawable/custom_bg_color"
                android:backgroundTintMode="add"
                android:text="@string/number_9"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:backgroundTint="@null" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_minus"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="25"
                android:background="@drawable/custom_bg_color"
                android:backgroundTintMode="add"
                android:text="@string/minus"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:backgroundTint="@null" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/number_fourth_row"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="2dp"
            android:orientation="horizontal"
            android:weightSum="100"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/number_third_row"
            app:layout_constraintBottom_toBottomOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_zero"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="50"
                android:background="@drawable/custom_bg_color"
                android:backgroundTintMode="add"
                android:text="@string/number_0"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:backgroundTint="@null" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_comma"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="25"
                android:background="@drawable/custom_bg_color"
                android:backgroundTintMode="add"
                android:text="@string/comma"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:backgroundTint="@null" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_equal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="25"
                android:background="@drawable/custom_bg_color"
                android:backgroundTintMode="add"
                android:text="@string/equal"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:backgroundTint="@null" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>